# stack_pimpl

./: CMakeLists.txt  readme.md
include/: pimpl.h  private.h  stack_pimpl.h
src/: main.cpp  pimpl.cpp  private.cpp  stack_pimpl.cpp
